<resources>
    <string name="app_name">First App TNy-Kk</string>
    <string name="contact">Contact</string>
    <string name="adduser">Adduser</string>
    <string name="about">About</string>
    <string name="firstProfile">FirstProfile</string>
    <string name="about_name">MR.THANAYUT MUNGUMKLANG</string>
    <string name="aboutprofile">AboutProfile</string>
    <string name="abouts">
        Nickname : kuka
        \n\nStudent code : 61162110286-4
        \n\neducation : Rajamangala University of Technology Isan, RMUTI
        \n\nDate of Birthday : 9 April 1999
        \nAge 21 years
    </string>
    <string name="play">Play</string>
    <string name="facebook">facebook</string>
    <string name="line">line</string>
    <string name="name_line">kuka50</string>
    <string name="name_facebook">"คู'ก ่ะ คูก้า"</string>
    <string name="name_ig">tny_kuka</string>
    <string name="ig">ig</string>

    <string name="to_add_a_contact">To add a contact?</string>

    <string name="how_was_hour_sleep">How was your sleep?</string>

    <string name="add_name"><![CDATA[<b>Name:</b>]]></string>
    <string name="button_save">Save</string>
    <string name="hint_word">Word…</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <string name="name">Name</string>
    <string name="phone">numberphone</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
