<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactViewModel"
            type="com.example.android.navigation.ContactViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactFragment">

        <TextView
            android:id="@+id/textview"
            android:layout_width="409dp"
            android:layout_height="425dp"
            android:layout_marginTop="20dp"
            android:text="@{contactViewModel.contactString}"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPhone"
            tools:layout_editor_absoluteX="1dp" />

        <Button
            android:id="@+id/buttonInsert"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{()->contactViewModel.onContactAdd()}"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.647" />

        <EditText
            android:id="@+id/editTextTextPersonEmail"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/buttonInsert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonPhone"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/buttonInsert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonEmail" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/buttonInsert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
