<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgabout"
        >

        <ImageView
            android:id="@+id/aboutprofile"
            android:layout_width="177dp"
            android:layout_height="141dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/aboutprofile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/aboutprofile" />

        <TextView
            android:id="@+id/aboutname"
            android:layout_width="315dp"
            android:layout_height="28dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/about_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/name_Size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutprofile" />

        <ScrollView
            android:layout_width="316dp"
            android:layout_height="310dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutname">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abouts"
                android:textColor="@android:color/black"
                android:textSize="@dimen/abouts" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>